versioned_docs/version-4.1/client-api/operations/maintenance/etl/update-etl.mdx
---
title: "Operations: How to Update ETL"
hide_table_of_contents: true
sidebar_label: Update ETL
sidebar_position: 1
---

import Admonition from '@theme/Admonition';
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import CodeBlock from '@theme/CodeBlock';
import LanguageSwitcher from "@site/src/components/LanguageSwitcher";
import LanguageContent from "@site/src/components/LanguageContent";

export const supportedLanguages = ["csharp", "java"];


# Operations: How to Update ETL
<LanguageSwitcher supportedLanguages={supportedLanguages} />
<LanguageContent language="csharp">


You can modify ETL task by using **UpdateEtlOperation**.

## Syntax

<TabItem value="update_etl_operation" label="update_etl_operation">
<CodeBlock language="csharp">
{`public UpdateEtlOperation(long taskId, EtlConfiguration<T> configuration)
`}
</CodeBlock>
</TabItem>

| Parameters | | |
| ------------- | ----- | ---- |
| **taskId** | long | Current ETL task ID | 
| **configuration** | `EtlConfiguration<T>` | ETL configuration where `T` is connection string type |

## Example

<TabItem value="update_etl_example" label="update_etl_example">
<CodeBlock language="csharp">
{`// AddEtlOperationResult addEtlResult = store.Maintenance.Send(new AddEtlOperation<RavenConnectionString>() \{ ... \});

UpdateEtlOperation<RavenConnectionString> operation = new UpdateEtlOperation<RavenConnectionString>(
    addEtlResult.TaskId,
    new RavenEtlConfiguration
    \{
        ConnectionStringName = "raven-connection-string-name",
        Name = "Employees ETL",
        Transforms =
        \{
            new Transformation
            \{
                Name = "Script #1",
                Collections =
                \{
                    "Employees"
                \},
                Script = @"loadToEmployees (\{
                        Name: this.FirstName + ' ' + this.LastName,
                        Title: this.Title
                \});"
            \}
        \}
    \});

UpdateEtlOperationResult result = store.Maintenance.Send(operation);
`}
</CodeBlock>
</TabItem>


</LanguageContent>
<LanguageContent language="java">


You can modify ETL task by using **UpdateEtlOperation**.

## Syntax

<TabItem value="update_etl_operation" label="update_etl_operation">
<CodeBlock language="java">
{`public UpdateEtlOperation(long taskId, EtlConfiguration<T> configuration);
`}
</CodeBlock>
</TabItem>

| Parameters | | |
| ------------- | ----- | ---- |
| **taskId** | Long | Current ETL task ID | 
| **configuration** | `EtlConfiguration<T>` | ETL configuration where `T` is connection string type |

## Example

<TabItem value="update_etl_example" label="update_etl_example">
<CodeBlock language="java">
{`//store.maintenance().send(new AddEtlOperation<RavenConnectionString>(...));

RavenEtlConfiguration etlConfiguration = new RavenEtlConfiguration();
etlConfiguration.setConnectionStringName("raven-connection-string-name");
etlConfiguration.setName("Employees ETL");
Transformation transformation = new Transformation();
transformation.setName("Script #1");
transformation.setCollections(Arrays.asList("Employees"));
transformation.setScript("loadToEmployees (\{\\n" +
    "                        Name: this.FirstName + ' ' + this.LastName,\\n" +
    "                            Title: this.Title\\n" +
    "                    \});");

etlConfiguration.setTransforms(Arrays.asList(transformation));

UpdateEtlOperation<RavenConnectionString> operation = new UpdateEtlOperation<>(
    addEtlResult.getTaskId(), etlConfiguration);
UpdateEtlOperationResult result = store.maintenance().send(operation);
`}
</CodeBlock>
</TabItem>


</LanguageContent>

<!---
### ETL
- [Basics](../../../../server/ongoing-tasks/etl/basics)
- [RavenDB ETL](../../../../server/ongoing-tasks/etl/raven)
- [SQL ETL](../../../../server/ongoing-tasks/etl/sql)

### Studio
- [RavenDB ETL Task](../../../../studio/database/tasks/ongoing-tasks/ravendb-etl-task)


-->